--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "PostgresConnectionString": "Host=localhost;Database=toby_like_asp;Username=ala;Password=1234@Pass"
+    "PostgresConnectionString": "Host=localhost;Database=toby_like_asp;Username=ala;Password=1234@Pass",
+    "SqlServerConnectionString": "Data Source=127.0.0.1;Initial Catalog=toby_like_asp;User ID=SA;Password=1234@Pass;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Authentication=SqlPassword;Application Name=azdata;Command Timeout=30"
+
   },
   "Logging": {
     "LogLevel": {
