--- a/Topy-like-asp-webapi.csproj
+++ b/Topy-like-asp-webapi.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>Topt_like_asp_webapi</RootNamespace>
+    <RootNamespace>Topy_like_asp_webapi</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
