feat: Seed Data To Elasticsearch async

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,6 +4,11 @@
     "SqlServerConnectionString": "Data Source=127.0.0.1;Initial Catalog=toby_like_asp;User ID=SA;Password=1234@Pass;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Authentication=SqlPassword;Application Name=azdata;Command Timeout=30"
   
   },
+  "Elasticsearch": {
+    "Nodes": [
+      "http://localhost:9200"
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
