chore: add elastic crid

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,9 @@
   "Elasticsearch": {
     "Nodes": [
       "http://localhost:9200"
-    ]
+    ],
+    "Username": "elastic",
+    "Password": "123456"
   },
   
   "Logging": {
